--- a/src/style.css
+++ b/src/style.css
@@ -53,7 +53,7 @@ html {
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+  /* text-size-adjust intentionally omitted for cross-browser consistency */
 }
 
 #app {
